--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -8,66 +8,39 @@
         <link href="../Font/Hardpixel.OTF">
     </head>
     
-    <body style="background-color: #a274bf;">
+    <body style="background-color: #6c0eff;">
         <div id="warp" style="height: 238%;">
             <div id="Titre" style="height: 16%; margin-top: 1%;">
                 <img id="TitreBot" src="PixelArt/Pixel.png">
             </div>
             <div id="Margin" style="height: 16.5%;"></div>
 
-            <p style="margin-left: 23%; margin-top: 1%;">Programme code en Python avec une base de données sur Pycharm</p>
-            <h1 style="margin-left:2%; margin-top: 12.75%;"><font color="#7d5297">Fate, Source Du Destin</font></h1>
-            <p style="margin-left: 2%; margin-top: 18%;">Fate est un Journal intime qui conserve toutes les <br>
-                donnees qui sont ecrites, en tant que journal intime <br>
-                il va de soit qu'il y a un systeme de securite comprenant <br>
-                un mot de passe crypte stocke dans un texte ainsi qu'un <br>
-                nombre de chance et une fermeture de securite, avant la fermeture <br>
-                de ce programme, il est possible de laisser un message que <br> 
-                l'utilisateur peut aller lire. <br>
-                Au premier Lancement de Fate, ce dernier cree tous ses <br>
-                dossiers lui meme, rendant le programme completement <br>
-                portable et explique le fonctionnement. <br>
-                aussi a chaque lancement de Fate, il s'assure qu'il ne manque <br>
-                aucun dossiers ni fichiers, et recree si il y a un probleme <br>
-                mais demande les raisons aussi a l'utilisateur, il se doit <br>
-                aussi de creer un fichier tous les debuts de mois, <br>
-                ce qu'il fait tres bien en suivant le calendrier.
-            </p>
-            <img src="Fate/FateLancement.png" style="margin-top: 14%; width: 33%; float: right; margin-right: 1%;">
-            <img src="Fate/FateMDP.png" style="margin-top: 1%; width: 33%; float: right; margin-right: 1%; ">
-            <img src="Fate/FateMois.png" style="margin-top: 1%; width: 33.5%; float: right; margin-right: 1%;">
+            <p style="margin-left: 10%; margin-top: 1.25%; font-size: 2.40vh;"><font color="#3405a0"> Cet Page parle de mes creations en pixel art pour un futur jeu video en haut et dans la suite,</font></p>
+            <p style="margin-left: 11.10%; margin-top: -1.75%; font-size: 2.40vh;"><font color="#3405a0">ce qui serra apres le mot "Millenia" parlera de l'univers et de mes idees pour ce futur jeu</font></p>
 
-            <h1 style="margin-left: 2%; margin-top: 47.25% "><font color="#7d5297">Scelle Dans L'Encre !</font></h1>
-            <p style="margin-left: 2%; margin-top: 19.5%;">Lors du Lancement de Fate, il demandera comment se  <br>
-                passe la journee du proprietaire entre 5 choix de reponses, <br>
-                a la suite de cet reponse, le comportement du programme changera, <br>
-                cette information sera enregistree dans le journal, et il demandera <br>
-                s'il veut ecrire soit dans le journal ou l'agenda, si jamais il <br>
-                refuse il sera toujours possible pour lui de remplir le jour <br>
-                dans le menu, aussi le programme permet au proprietaire de remplir <br>
-                les 15 derniers jours si jamais il y en a parmi eux qui ne sont <br>
-                pas remplis.
-            </p>
-            <img src="Fate/FateAvant.png" style="float: right; margin-top: 15%; width: 35%; margin-right: 1%;">
-            <img src="Fate/FateSentImentLanc.png" style="float: right; margin-top: 1%; width: 43%; margin-right: -35%;">
+
+            <h1 style="margin-left: 25.5%; margin-top: 12.75%;"><font color="#7d5297"> <u>Les Petits Sprites</u> :</font></h1>
+
+            <img src="PixelArt/Creation/Sprite/ExpoSprite.png" style="float: left; margin-left: 11.5%; margin-top: 23%; height: 3.5%;">
+            <img src="PixelArt/Creation/Sprite/Teddy-Box.png" style="float: left;margin-top : 18%; margin-left: 1.5%; height: 5.5%;">
+
+
+
+            <h1 style="margin-left: 28%; margin-top: 37%;"><font color="#7d5297"> <u>Des Moveset</u> :</font></h1>
+
+            <img src="PixelArt/Creation/Moveset/Max Sprite complet.png" style="float: left; margin-left: 11.5%; margin-top: 25.5%; height: 6.5%;">
+            <img src="PixelArt/Creation/Moveset/Corbac sprite.png" style="float: left;margin-top : 26.5%; margin-left: 12.5%; height: 6%;">
+
+            <h1 style="margin-left: 28%; margin-top: 64%;"><font color="#7d5297"> <u>Annimation</u> :</font></h1>
+
+
+
+
 
             <h1 style="margin-left: 2%; margin-top: 85%;"><font color="#7d5297">Robotique Sentimental</font></h1>
-            <p style="margin-left: 2%; margin-top: 36%;">Une fois que vous avez ecrit tout ce que vous <br>
-                vouliez dire, <br>
-                il est possible de tout relire dans les archives, <br>
-                le programme stock tout. Il est donc même possible <br>
-                de lire des choses d'il y a longtemps. aussi la selection <br>
-                des jours est representee dans un grand tableau ou tous les <br>
-                jours d'un mois se representent avec un code couleur en fonction <br>
-                de l'emotion correspondante au jour <br>
-                (comment c'est passe la journee en grand therme)
-            </p>
-            <img src="Fate/FateLireAvant.png" style="float: right; margin-top: 15%; width: 21%; margin-right: 9%;" >
-            <img src="Fate/FateCalendrier.png" style="float: right; margin-top: 1%; width: 41%; margin-right: 1%;">
+
 
             <h1 style="float:left; margin-top: 116%; margin-left: 30%;"> <font color="#7d5297">Conclusion</font></h1>
-            <p style="margin-left: 2%; margin-right: 2%; margin-top: 15.5%;">Le nom de "Fate" vient de la bague que porte un personnage important de mon univers (celui en font sur l'accueil du portfolio) et ce programme me tient a coeur et j'ai eprouve beaucoup de motivation a le faire.
-                Ce programme a ete un programme tres enrichissant a faire, c'est une idee de projet que j'ai eu en debut Decembre 2021 et c'est un projet que j'ai fait en complete autonomie, il m'a fait realiser pas mal de choses sur le fait de programmer en autonomie. j'ai aussi appris a comment gerer des donnees dans plusieurs fichiers, crypter et a faire un programme qui se repare ainsi qu'a le faire utiliser la notion de temps. </p>
 
             <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
                 <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -49%;"> 
