--- a/Proj/PixelArt.html
+++ b/Proj/PixelArt.html
@@ -9,11 +9,11 @@
     </head>
     
     <body style="background-color: #6c0eff;">
-        <div id="warp" style="height: 238%;">
-            <div id="Titre" style="height: 16%; margin-top: 1%;">
+        <div id="warp" style="height: 338%;">
+            <div id="Titre" style="height: 12%; margin-top: 1%;">
                 <img id="TitreBot" src="PixelArt/Pixel.png">
             </div>
-            <div id="Margin" style="height: 16.5%;"></div>
+            <div id="Margin" style="height: 12.4%;"></div>
 
             <p style="margin-left: 10%; margin-top: 1.25%; font-size: 2.40vh;"><font color="#3405a0"> Cet Page parle de mes creations en pixel art pour un futur jeu video en haut et dans la suite,</font></p>
             <p style="margin-left: 11.10%; margin-top: -1.75%; font-size: 2.40vh;"><font color="#3405a0">ce qui serra apres le mot "Millenia" parlera de l'univers et de mes idees pour ce futur jeu</font></p>
@@ -21,34 +21,40 @@
 
             <h1 style="margin-left: 25.5%; margin-top: 12.75%;"><font color="#7d5297"> <u>Les Petits Sprites</u> :</font></h1>
 
-            <img src="PixelArt/Creation/Sprite/ExpoSprite.png" style="float: left; margin-left: 11.5%; margin-top: 23%; height: 3.5%;">
-            <img src="PixelArt/Creation/Sprite/Teddy-Box.png" style="float: left;margin-top : 18%; margin-left: 1.5%; height: 5.5%;">
+            <img src="PixelArt/Creation/Sprite/ExpoSprite.png" style="float: left; margin-left: 8%; margin-top: 21%; height: 2.75%;">
+            <img src="PixelArt/Creation/Sprite/Teddy-Box.png" style="float: left;margin-top : 15%; margin-left: 1.5%; height: 4.5%;">
+
+
+            <h1 style="margin-left: 28%; margin-top: 32.5%;"><font color="#7d5297"> <u>Des Moveset</u> :</font></h1>
+
+            <img src="PixelArt/Creation/Moveset/Max Sprite complet.png" style="float: left; margin-left: 11.5%; margin-top: 18.5%; height: 4.5%;">
+            <img src="PixelArt/Creation/Moveset/Corbac sprite.png" style="float: left;margin-top : 19%; margin-left: 12.5%; height: 4.5%;">
+
+            <h1 style="margin-left: 28%; margin-top: 56%;"><font color="#7d5297"> <u>Annimation</u> :</font></h1>
+
+            <img src="PixelArt/Creation/Animation/Max_qui_court_loin.gif" style="float: left; margin-left: -70%; margin-top: 55%; height: 1.5%;">
+            <img src="PixelArt/Creation/Animation/Max_qui_courtv.gif" style="float: left; margin-left: -75%; margin-top: 55%; height: 1.5%;">
+            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotéd.gif" style="float: left; margin-left: -75%; margin-top: 61%; height: 1.5%;" >
+            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotég.gif"  style="float: left; margin-left: -70%; margin-top: 61%; height: 1.5%;" >
+            <img src="PixelArt/Creation/Animation/AileNoir.gif" style="float: left; margin-left: -63%; margin-top: 61%; height: 1.5%;" >
+            <img src="PixelArt/Creation/Animation/Arbre_EnneigeKyla.gif"  style="float: left; margin-left: -60%; margin-top: 50%; height: 6%;">
+            <img src="PixelArt/Creation/Animation/Cour coté.gif" style="float: left; margin-left: -44%; margin-top: 57.5%; height: 3%;">
+            <img src="PixelArt/Creation/Animation/bg.gif" style="float: left; margin-left: -23%; margin-top: 52%; height: 4.65%;">
 
 
 
-            <h1 style="margin-left: 28%; margin-top: 37%;"><font color="#7d5297"> <u>Des Moveset</u> :</font></h1>
+            <h1 style="margin-left: 28%; margin-top: 81%;"><font color="#7d5297"> <u>Quelques Objets</u> :</font></h1>
 
-            <img src="PixelArt/Creation/Moveset/Max Sprite complet.png" style="float: left; margin-left: 11.5%; margin-top: 25.5%; height: 6.5%;">
-            <img src="PixelArt/Creation/Moveset/Corbac sprite.png" style="float: left;margin-top : 26.5%; margin-left: 12.5%; height: 6%;">
-
-            <h1 style="margin-left: 28%; margin-top: 67%;"><font color="#7d5297"> <u>Annimation</u> :</font></h1>
-
-            <img src="PixelArt/Creation/Animation/Max_qui_court_loin.gif" style="float: left; margin-left: -65%; margin-top: 68%; height: 2.2%;">
-            <img src="PixelArt/Creation/Animation/Max_qui_courtv.gif" style="float: left; margin-left: -70%; margin-top: 68%; height: 2.2%;">
-            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotéd.gif" style="float: left; margin-left: -70%; margin-top: 74%; height: 2.2%;" >
-            <img src="PixelArt/Creation/Animation/Max_qui_court_de_cotég.gif"  style="float: left; margin-left: -65%; margin-top: 74%; height: 2.2%;" >
-            <img src="PixelArt/Creation/Animation/AileNoir.gif" style="float: left; margin-left: -58%; margin-top: 74%; height: 2.2%;" >
-            <img src="PixelArt/Creation/Animation/Arbre_EnneigeKyla.gif"  style="float: left; margin-left: -53%; margin-top: 65%; height: 7.2%;">
-            <img src="PixelArt/Creation/Animation/Cour coté.gif" style="float: left; margin-left: -37%; margin-top: 68%; height: 4.3%;">
-            <img src="PixelArt/Creation/Animation/bg.gif" style="float: left; margin-left: -15%; margin-top: 68%; height: 5.7%;">
+            <img src="PixelArt/Creation/Decors/Box.png" style="float: left; margin-left: -90%; margin-top: 87%; height: 4.75%;">
+            <img src="PixelArt/Creation/Decors/Arbreaveccanne.png" style="float: left; margin-left: -46%; margin-top: 87%; height: 5.3%;">
+            <img src="PixelArt/Creation/Decors/Spears.png" style="float: left; margin-left: -25%; margin-top: 94%; height: 2.5%;">
 
 
 
-            <h1 style="margin-left: 28%; margin-top: 95%;"><font color="#7d5297"> <u>Quelques Objets</u> :</font></h1>
 
-            <img src="PixelArt/Creation/Decors/Box.png" style="float: left; margin-left: -90%; margin-top: 112%; height: 6%;">
-            <img src="PixelArt/Creation/Decors/Arbreaveccanne.png" style="float: left; margin-left: -46%; margin-top: 112%; height: 6.2%;">
-            <img src="PixelArt/Creation/Decors/Spears.png" style="float: left; margin-left: -25%; margin-top: 120%; height: 2.5%;">
+            <h2 style="margin-left: 28%; margin-top: 112%;"><font color="#6c0eff"><u><b> MILLENIA </b></u></font></h2>
+
+
 
 
 
@@ -56,18 +62,18 @@
 
 
             <a href="HeadinCloud.html" onmouseover="HoverIcon('Pixel','PixelSouri')" onmouseout="PasHover('Pixel','PixelSouri')">
-                <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 133.5%; margin-left: -49%;"> 
-                <img src="suite/Gauche/Headsus.png" id="PixelSouri" style="opacity: 0; margin-top: 133%; margin-left: -49%;">
+                <img src="suite/Gauche/Head.png" id="Pixel" style="opacity: 1; margin-top: 200.5%; margin-left: -49%;"> 
+                <img src="suite/Gauche/Headsus.png" id="PixelSouri" style="opacity: 0; margin-top: 200%; margin-left: -49%;">
             </a>
 
             <a href="../Projet.html" onmouseover="HoverIcon('Proj','ProjSouri')" onmouseout="PasHover('Proj','ProjSouri')">
-                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 133.5%; margin-left: -24%;"> 
-                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 133%; margin-left: -24%;">
+                <img src="suite/Accueil.png" id="Proj" style="opacity: 1; margin-top: 200.5%; margin-left: -24%;"> 
+                <img src="suite/Accueilsus.png" id="ProjSouri" style="opacity: 0; margin-top: 200%; margin-left: -24%;">
             </a>
 
             <a href="Bot.html" onmouseover="HoverIcon('Jar','JarSouri')" onmouseout="PasHover('Jar','JarSouri')">
-                <img src="suite/Droite/Botapr.png" id="Jar" style="opacity: 1; margin-top: 133.5%; margin-left: -3%;">
-                <img src="suite/Droite/Botsus.png" id="JarSouri" style="opacity: 0; margin-top: 133%; margin-left: -3%;">
+                <img src="suite/Droite/Botapr.png" id="Jar" style="opacity: 1; margin-top: 200.5%; margin-left: -3%;">
+                <img src="suite/Droite/Botsus.png" id="JarSouri" style="opacity: 0; margin-top: 200%; margin-left: -3%;">
             </a>
 
         </div>
